Squashed commit of the following:
commit 55d1f644c2b52b0f20b1b842ee08bdef41b64ef6
Author: Koerismo <56563658+koerismo@users.noreply.github.com>
Date:   Sat Dec 24 23:55:17 2022 -0500

    Various fixes, endian test variance, bump version

commit b080ca962b196ae0b9aa121aeba529791ccfe1ad
Author: Koerismo <56563658+koerismo@users.noreply.github.com>
Date:   Sat Dec 24 19:16:55 2022 -0500

    Fix SINGLE magic failing, add NULLSTOP test

commit 8d5c407bb8ba0773e3698184b77f1dc8688693fd
Author: Koerismo <56563658+koerismo@users.noreply.github.com>
Date:   Thu Dec 22 21:34:07 2022 -0500

    Rework pack/unpack internals, add magic & NULLSTOP

commit 6ad74f152625a870263e8867061a616a4472a4f9
Author: Koerismo <56563658+koerismo@users.noreply.github.com>
Date:   Thu Dec 22 12:34:36 2022 -0500

    Add Tap testing

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "struxt",
-	"version": "1.2.1",
+	"version": "1.2.2",
 	"description": "Low-level dynamic binary data structures for Javascript.",
-	"keywords": [ "struct", "binary", "transform", "parsing", "lightweight" ],
+	"keywords": [ "struct", "binary", "data", "parsing", "lightweight" ],
 	"type": "module",
 
 	"author": "koerismo",
@@ -17,7 +17,7 @@
 
 	"scripts": {
 		"build": "tsc",
-		"test": "node ./test/run.js",
+		"test": "tap",
 		"publish": "npm run test && npm publish"
 	},
 	"repository": {
@@ -26,6 +26,7 @@
 	},
 
 	"devDependencies": {
+		"tap": "^16.3.2",
 		"typescript": "^4.9.4"
 	}
 }
