--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 
 	"scripts": {
 		"build": "tsc",
-		"test": "tap",
+		"test": "c8 mocha",
 		"publish": "npm run test && npm publish"
 	},
 	"repository": {
@@ -26,7 +26,8 @@
 	},
 
 	"devDependencies": {
-		"tap": "^16.3.2",
+		"c8": "^7.12.0",
+		"mocha": "^10.2.0",
 		"typescript": "^4.9.4"
 	}
 }
