--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "struxt",
-	"version": "1.2.2",
-	"description": "Low-level dynamic binary data structures for Javascript.",
+	"version": "2.0.0",
+	"description": "Functional binary structures for Javascript.",
 	"keywords": [ "struct", "binary", "data", "parsing", "lightweight" ],
 	"type": "module",
 
 	"author": "koerismo",
 	"license": "MPL-2.0",
-	"bugs": { "url": "https://github.com/koerismo/struct.ts/issues" },
-	"homepage": "https://github.com/koerismo/struct.ts",
+	"bugs": { "url": "https://github.com/koerismo/struxt/issues" },
+	"homepage": "https://github.com/koerismo/struxt",
 
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -22,7 +22,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/koerismo/struct.ts.git"
+		"url": "git+https://github.com/koerismo/struxt.git"
 	},
 
 	"devDependencies": {
