--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
 	"name": "struxt",
-	"version": "2.0.0",
-	"description": "Functional binary structures for Javascript.",
-	"keywords": [ "struct", "binary", "data", "parsing", "lightweight" ],
-	"type": "module",
-
 	"author": "koerismo",
-	"license": "MPL-2.0",
-	"bugs": { "url": "https://github.com/koerismo/struxt/issues" },
-	"homepage": "https://github.com/koerismo/struxt",
+	"description": "Functional binary structures for Javascript.",
+	"version": "3.0.0",
+	"keywords": [
+		"struct",
+		"binary",
+		"data",
+		"parsing",
+		"lightweight"
+	],
 
+	"type": "module",
+	"license": "MPL-2.0",
+	"bugs": {
+		"url": "https://github.com/koerismo/struxt/issues"
+	},
+
+	"homepage": "https://github.com/koerismo/struxt",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": [ "dist/*" ],
-	"sideEffects": [ "./src/index.ts" ],
+	"files": [
+		"dist/*"
+	],
 
 	"scripts": {
 		"build": "tsc",
 		"test": "c8 mocha",
 		"publish": "npm run test && npm publish"
 	},
+	
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/koerismo/struxt.git"
@@ -28,6 +38,8 @@
 	"devDependencies": {
 		"c8": "^7.12.0",
 		"mocha": "^10.2.0",
+		"ts-macros": "^2.2.2",
+		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4"
 	}
 }
