Fix most things, remove generic dynamic lengths feature

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"moduleResolution": "nodenext",
 		"declaration": true,
 		"alwaysStrict": true,
-		
+		"strict": true,
+
 		"plugins": [
 			{ "transform": "ts-macros" }
 		]
