--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"outDir": "dist",
 		"baseUrl": "src",
 		"lib": [ "DOM", "ES2020" ],
-		"moduleResolution": "nodenext",
+		"moduleResolution": "node",
 		"declaration": true,
 		"alwaysStrict": true,
 		"strict": true,
