--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
 		"ts-macros": "^2.3.0",
 		"ts-patch": "^3.0.1",
 		"typescript": "^5.1.6"
+	},
+	"dependencies": {
+		"fast-deep-equal": "^3.1.3"
 	}
 }
