--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"baseUrl": "src",
 		"lib": [ "DOM", "ES2020" ],
 		"moduleResolution": "node",
+		"esModuleInterop": true,
 		"declaration": true,
 		"alwaysStrict": true,
 		"strict": true,
